# ansi.rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  mise.toml  package.json  rustfmt.toml
crates/ansi/: Cargo.toml
crates/ansi/benches/: lib.rs  parser.rs  parser_criterion.rs  parser_divan.rs  profiler.rs  utf8.rs
crates/ansi/src/: attribute.rs  attribute_next.rs  bit_color.rs  color.rs  color2.rs  color_next.rs  color_space.rs  control.rs  escape.rs  lib.rs  models.rs  style.rs
crates/ansi/src/color/: color.rs  color_space.rs  escape.rs  experimental.rs  mod.rs  space.rs
crates/ansi/src/events/: events.rs  listener.rs  mod.rs  parse.reference.go  parse.rs
crates/ansi/src/models/: intermediates.rs  mod.rs  params.rs  sequences.rs  types.rs
crates/ansi/src/parser/: VT_DEC_STATE_MACHINE.txt  action.rs  base_parser.rs  collectors.rs  conditions.rs  definition.rs  handler.rs  internals.rs  mod.rs  parameters_builder.rs  params.rs  parser.rs  parser2.rs  parser_cleaned.rs  parser_input.rs  parser_utf8.rs  raw_parameters.rs  sequences.rs  state.rs  stripper.rs  table.rs  tests.rs  transition.rs  transition.txt  transitions.rs  types.rs  utf8_parser.rs
crates/ansi/src/parser2/: mod.rs  parser.rs  stripper.rs  transitions.rs  types.rs
crates/ansi/src/sequences/: area.rs  common_modes.rs  cost.rs  cursor.rs  erasure.rs  macros.rs  misc.rs  mod.rs  scroll.rs  sgr.rs
crates/ansi/src/style/: attribute.rs  mod.rs  style.rs  underline_style.rs
crates/first_sigil/: Cargo.toml  README.md
crates/first_sigil/examples/: hello_world.rs
crates/first_sigil/src/buffer/: index.rs
crates/first_sigil/src/layout/: macros.rs
crates/first_sigil/src/text/: display_width.rs
crates/first_sigil/tests/test_utils/: assertions.rs  mod.rs
crates/geometry/: Cargo.toml
crates/geometry/benches/: region.rs  step.rs
crates/geometry/src/: area.rs  axis.rs  edges.rs  geometry.rs  lib.rs  macros.rs  point.rs  position.rs  prelude.rs  rect.rs  sides.rs  size.rs
crates/geometry/src/bounds/: bounds.rs  column.rs  mod.rs  position.rs  row.rs
crates/geometry/src/features/: bounded.rs  bounds.rs  consts.rs  contains.rs  coordinate.rs  func.rs  intersect.rs  location.rs  mod.rs  outer.rs  resolve.rs  sides.rs  steps.rs  transforms.rs
crates/geometry/src/geometry/: edges.rs  mod.rs  point.rs  rect.rs  sides.rs  size.rs
crates/geometry/src/grid/: bounds.rs  grid.rs  index.rs  mod.rs  position.rs  spatial_index.rs
crates/geometry/src/index/: __unused_spatial_iter.rs  area.rs  bounds.rs  col.rs  column.rs  mod.rs  position.rs  range.rs  region.rs  row.rs  spatial_iter.rs
crates/geometry/src/num/: checked.rs  consts.rs  float.rs  integer.rs  mod.rs  number.rs  ops.rs
crates/geometry/src/number/: consts.rs  integer.rs  mod.rs
crates/geometry/src/region/: iter.rs  mod.rs  region.rs  step.rs
crates/geometry/src/traits/: anchor.rs  bound.rs  bounds.rs  consts.rs  contains.rs  coordinate.rs  intersect.rs  location.rs  map.rs  mod.rs  outer.rs  resolve.rs  steps.rs  translate.rs
crates/gloss/: Cargo.toml
crates/gloss/benches/: bench.rs  cell.rs  main.rs  terminal.rs  wip.rs
crates/gloss/src/: buffer.rs  context.rs  document.rs  engine.rs  layout_context.rs  lib.rs  measure.rs  mock.rs  nodes.rs  render.rs  render_context.rs  style.rs
crates/gloss/src/buffer/: buf.rs  buffer.rs  buffer_diff.rs  buffer_double.rs  buffer_generation.rs  buffer_index.rs  buffer_tracking.rs  cell.rs  diff.rs  double.rs  double_buffer.rs  index.rs  mod.rs  tracking.rs  tracking_buffer.rs
crates/gloss/src/drawing/: buffer_drawing_context.rs  drawing_context.rs
crates/gloss/src/elements/: builder.rs  element.rs  kind.rs  mod.rs
crates/gloss/src/layout/: box_properties.rs  computation.rs  computed.rs  context.rs  geometry.rs  layout_context.rs  layouted.rs  measure.rs  measure_function.rs  measure_function_next.rs  measure_next.rs  mod.rs  node.rs  style.rs  text_properties.rs  values.rs
crates/gloss/src/layouting/: layout_context.rs  measure.rs  mod.rs
crates/gloss/src/paint/: buffer_drawing_context.rs  drawing_context.rs  painter.rs
crates/gloss/src/painting/: buffer.rs  buffer_drawing_context.rs  drawing_context.rs  mod.rs  painter.rs  renderer.rs
crates/gloss/src/presenter/: buffer_diff.rs  counting.rs  mod.rs  presenter.rs  stats.rs
crates/gloss/src/raster/: mod.rs  pen.rs  presenter.rs  presenter_roundtrip.rs  rasterer.rs
crates/gloss/src/rasterizer/: cursor.rs  rasterizer.rs
crates/gloss/src/rendering/: backend.rs  buffer.rs  buffer_context.rs  mod.rs  renderer.rs
crates/gloss/src/style/: geometry.rs  mod.rs  properties.rs  style.rs  values.rs
crates/gloss/src/symbols/: blocks.rs  borders.rs  box_drawing.rs  box_drawing.unused.fish  lines.rs  mod.rs  shape.rs  symbol.rs
crates/grid/: Cargo.toml
crates/grid/benches/: step.rs
crates/grid/src/: area.rs  bounds.rs  context.rs  grid.rs  lib.rs  location.rs  row.rs  spatial.rs  spatial_index.rs
crates/grid/src/features/: bounded.rs  contains.rs  intersect.rs  into_location.rs  into_slice_index.rs  iterator.rs  located.rs  mod.rs  sides.rs  span.rs  spatial_index.rs  step.rs  steps.rs
crates/grid/src/location_context/: into_slice_index.rs  iterator.rs  located.rs  mod.rs  span.rs
crates/grid/src/locations/: column.rs  index.rs  mod.rs  position.rs
crates/kasten/: CLAUDE.md  Cargo.toml  NOTES.md
crates/kasten/examples/: hello_world.rs
crates/kasten/src/: geometry.rs  indexing.rs  layout.rs  lib.rs  position.rs  tree.rs
crates/kasten/src/buffer/: buffer.rs  cell.rs  index.rs  mod.rs  range.rs  selector.rs
crates/kasten/src/layout/: constraints.rs  core.rs  layout.rs  layout_node.rs  macros.rs  mod.rs  node.rs
crates/kasten/src/runes/: mod.rs  width.rs
crates/sigil/: Cargo.toml  NOTES.md
crates/sigil/benches/: buffer.rs  lib.rs  rasterizer.rs
crates/sigil/src/: document.rs  engine.rs  lib.rs  orchestrator.rs  painter.rs  renderer.rs  scene.rs
crates/sigil/tests/: assertions.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: capabilities.rs  lib.rs  raw_mode.rs  signals.rs  size.rs
docs/: zr_diff.rs  (+5 more)
(+361 files in other folders)
