[workspace]
resolver = "3"
members = [
    "crates/ansi", "crates/geometry", "crates/spatial",
    "crates/sigil", "crates/terminal", "crates/utils",
    "crates/utils/crates/tree",
    "crates/utils/crates/tagged/core", "crates/utils/crates/tagged/derive",
    "crates/utils/crates/etwa/core", "crates/utils/crates/etwa/derive", "crates/gloss",
]

[workspace.dependencies]
smallvec = {version = "2.0.0-alpha.12" }
rustix = { version = "1.1.2", features = ["termios"] }
smol = "2.0.2"
derive_more = { version = "2.0.1", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
bitflags = "2.10.0"
bytemuck = "1.24.0"
textwrap = "0.16.2"
bitcraft = "0.9.2"

# Workspace crates
ansi = { path = "crates/ansi" }
geometry = { path = "crates/geometry" }
spatial = { path = "crates/spatial" }
sigil = { path = "crates/sigil" }
terminal = { path = "crates/terminal" }
utils = { path = "crates/utils" }
tree = { path = "crates/utils/crates/tree" }
gloss = { path = "crates/gloss" }

tagged = { path = "crates/utils/crates/tagged/core" }
tagged-derive = { path = "crates/utils/crates/tagged/derive" }
etwa = { path = "crates/utils/crates/etwa/core" }
etwa-derive = { path = "crates/utils/crates/etwa/derive" }

[profile.bench]
debug = true
