[workspace]
resolver = "3"
members = [
    "crates/ansi", "crates/geometry","crates/utils",
    "crates/utils/crates/tree",
    "crates/utils/crates/tagged/core", "crates/utils/crates/tagged/derive",
    "crates/utils/crates/maybe/core", "crates/utils/crates/maybe/derive", "crates/gloss",
]

[workspace.dependencies]
# Workspace
ansi = { path = "crates/ansi" }
geometry = { path = "crates/geometry" }
utils = { path = "crates/utils" }
tree = { path = "crates/utils/crates/tree" }
gloss = { path = "crates/gloss" }

tagged = { path = "crates/utils/crates/tagged/core" }
tagged-derive = { path = "crates/utils/crates/tagged/derive" }
maybe = { path = "crates/utils/crates/maybe/core" }
maybe-derive = { path = "crates/utils/crates/maybe/derive" }

# Shared dependencies
smallvec = {version = "2.0.0-alpha.12" }
arrayvec = "0.7.6"
rustix = { version = "1.1.4", features = ["termios"] }
derive_more = { version = "2.1.1", features = ["full"] }
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
taffy = { version = "0.10.0", features = ["default"] }
bitflags = "2.11.0"
textwrap = "0.16.2"
bilge = "0.3.0"
thiserror = "2.0.18"

# Experimental
bytemuck = "1.25.0"
bitcraft = "0.9.2"
