[workspace]
resolver = "3"
members = [
    "crates/ansi",
    "crates/geometry",
    "crates/utils",
    "crates/utils/crates/tree",
    "crates/utils/crates/tagged/core",
    "crates/utils/crates/tagged/derive",
    "crates/utils/crates/maybe/core",
    "crates/utils/crates/maybe/derive",
    "crates/gloss",
    "crates/terminal",
    "crates/number",
]

[workspace.dependencies]
# Workspace
ansi = { path = "crates/ansi" }
geometry = { path = "crates/geometry" }
utils = { path = "crates/utils" }
tree = { path = "crates/utils/crates/tree" }
gloss = { path = "crates/gloss" }
terminal = { path = "crates/terminal" }
number = { path = "crates/number" }

tagged = { path = "crates/utils/crates/tagged/core" }
tagged-derive = { path = "crates/utils/crates/tagged/derive" }
maybe = { path = "crates/utils/crates/maybe/core" }
maybe-derive = { path = "crates/utils/crates/maybe/derive" }

# Shared dependencies
smallvec = { version = "2.0.0-alpha.12" }
arrayvec = "0.7.6"
rustix = { version = "1.1.4", features = ["termios"] }
derive_more = { version = "2.1.1", features = ["full"] }
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
unicode-linebreak = "0.1.5"
taffy = { version = "0.10.1", features = ["default"] }
bitflags = "2.11.1"
textwrap = "0.16.2"
bilge = "0.3.0"
thiserror = "2.0.18"
paste = "1.0.15"
slotmap = "1.1.1"
compact_str = "0.9.0"
bon = "3.9.1"
memchr = "2.8.0"

# Experimental
bytemuck = "1.25.0"
bitcraft = "0.9.2"
