[package]
name = "ansi"
version = "0.1.0"
edition = "2024"

[dependencies]
number = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
utils = { workspace = true }
geometry = { workspace = true }
maybe = { workspace = true }
maybe-derive = { workspace = true }
derive_more = { workspace = true }
bilge = { workspace = true }
arrayvec = { workspace = true }
compact_str = { workspace = true }
segmented-vec = "0.2.3"
smallvec = { workspace = true }
synonym = "0.1.6"
nutype = "0.6.2"
strum = { version = "0.28", features = ["derive"] }
bitfield-struct = "0.13.0"
log = "0.4.29"
memchr = "2.8.0"
utils-derive = { workspace = true }
vte_generate_state_changes = "0.2.0"
flagset = "0.4.7"
palette = "0.7.6"
pprof =  { version = "0.15.0", features = ["criterion", "flamegraph"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
vt-push-parser = "0.13.1"
vte = "0.15.0"
inferno = "0.11.21"
divan = "0.1.21"


[[bench]]
name = "parser_criterion"
harness = false

[[bench]]
name = "parser_divan"
harness = false
[lints]
workspace = true
