[package]
name = "ansi"
version = "0.1.0"
edition = "2024"

[dependencies]
number = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
utils = { workspace = true }
geometry = { workspace = true }
maybe = { workspace = true }
maybe-derive = { workspace = true }
derive_more = { workspace = true }
arrayvec = { workspace = true }
bilge = "0.3.0"
strum = { version = "0.28", features = ["derive"] }
memchr = "2.8.0"
utils-derive = { workspace = true }
pprof =  { version = "0.15.0", features = ["criterion", "flamegraph"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
divan = "0.1.21"
vt-push-parser = "0.13.1"
vte = "0.15.0"
inferno = "0.11.21"


[[bench]]
name = "parser_criterion"
harness = false

[[bench]]
name = "parser_divan"
harness = false
[lints]
workspace = true
