[package]
name = "ansi"
version = "0.1.0"
edition = "2024"

[dependencies]
number = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
utils = { workspace = true }
geometry = { workspace = true }
maybe = { workspace = true }
maybe-derive = { workspace = true }
derive_more = { workspace = true }
arrayvec = { workspace = true }
filedescriptor = "*"
rustix = { version = "1.1.4", features = ["stdio", "all-apis"] }
bilge = "0.3.0"
polling = "3.11.0"
strum = { version = "0.28", features = ["derive"] }
memchr = "2.8.0"
utils-derive = { workspace = true }
pprof =  { version = "0.15.0", features = ["criterion", "flamegraph"] }
utf8parse = "0.2.2"
utf8-zero = "0.8.1"
simdutf8 = "0.1.5"
memspan = "0.1.0"
bytes = "1.12.0"
smallvec = { version = "2.0.0-alpha.12", features = ["specialization", "bytes", "extract_if"] }
tinyvec = "1.11.0"
smallvec-wrapper = "0.4.1"
[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
divan = "0.1.21"
vt-push-parser = "0.13.1"
vte = "0.15.0"
inferno = "0.11.21"
utf8parse = "0.2.2"
utf8-zero = "0.8.1"
memspan = "0.1.0"

[lints]
workspace = true
