[package]
name = "gloss"
version = "0.1.0"
edition = "2024"

[dependencies]
synonym = "0.1.6"
ansi = { workspace = true }
num = "0.4.3"
geometry = { workspace = true }
tree = { workspace = true }
maybe = { workspace = true }
sigil = { workspace = true }
tagged = { workspace = true }
taffy = {  version = "0.9.2" }
bitflags = "2.10.0"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
paste = "1.0.15"
slotmap = "1.1.1"
derive_builder = "0.20.2"
typed-builder = "0.23.2"
bon = "3.9.1"
derive_more = { workspace = true }
grid = { version = "1.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
compact_str = "0.9.0"

[[bin]]
name = "gloss"
