[package]
name = "gloss"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { workspace = true }
ansi = { workspace = true }
geometry = { workspace = true }
tree = { workspace = true }
maybe = { workspace = true }
tagged = { workspace = true }
taffy = {  workspace = true, features = ["default"] }
bitflags = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
derive_more = { workspace = true }
rustix = { workspace = true }
bilge = { workspace = true }
thiserror = { workspace = true }

paste = "1.0.15"
slotmap = "1.1.1"
compact_str = "0.9.0"
derive_builder = "0.20.2"
typed-builder = "0.23.2"
bon = "3.9.1"
memchr = "2.8.0"
packed_struct = "0.10.1"

[dev-dependencies]
criterion = "0.8.2"

[[bin]]
name = "main"

[[bench]]
name = "main"
harness = false