[package]
name = "gloss"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { workspace = true }
ansi = { workspace = true }
terminal = { workspace = true }
number = { workspace = true }
geometry = { workspace = true }
tree = { workspace = true }
maybe = { workspace = true }
tagged = { workspace = true }
taffy = { workspace = true }
bitflags = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-linebreak = { workspace = true }
derive_more = { workspace = true }
rustix = { workspace = true }
bilge = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
paste = { workspace = true }
slotmap = { workspace = true }
compact_str = { workspace = true }
bon = { workspace = true }
memchr = { workspace = true }

packed_struct = "0.10.1"
fast-strip-ansi = "0.13.1"
vt-push-parser = "0.13.1"

[dev-dependencies]
criterion = "0.8.2"

[[bin]]
name = "main"

[[bench]]
name = "bench"
harness = false
