[package]
name = "kasten"
version = "0.1.0"
edition = "2024"

[dependencies]
kurbo = { workspace = true }
ansi = { workspace = true }
unicode-width = { workspace = true }
utils = { workspace = true }
unicode-segmentation = { workspace = true }
derive_more = { workspace = true }
compact_str = "0.9.0"
rustix = "1.1.3"
textwrap.workspace = true
runefix-core = "0.1.10"
serde_json = "1.0.149"
unicode-display-width = "0.3.0"

[[bin]]
name = "sandbox"
test = false
bench = false
