[package]
name = "sigil"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi = { workspace = true }
geometry = { workspace = true }
terminal = { workspace = true }
unicode-width = { workspace = true }
utils = { workspace = true }
unicode-segmentation = { workspace = true }
derive_more = { workspace = true }
compact_str = "0.9.0"
rustix = "1.1.3"
textwrap.workspace = true
unicode-display-width = "0.3.0"
notcurses = "3.6.0"
slotmap = "1.1.1"
indextree = "4.7.4"
taffy = "0.9.2"

[[bin]]
name = "sandbox"
test = false
bench = false

