[package]
name = "sigil"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi = { workspace = true }
geometry = { workspace = true }
grid = { workspace = true }
tree = { workspace = true }
terminal = { workspace = true }
unicode-width = { workspace = true }
utils = { workspace = true }
unicode-segmentation = { workspace = true }
derive_more = { workspace = true }
compact_str = "0.9.0"
rustix = "1.1.3"
textwrap.workspace = true
unicode-display-width = "0.3.0"
notcurses = "3.6.0"
slotmap = "1.1.1"
indextree = "4.7.4"
taffy = "0.9.2"
thiserror = "2.0.18"
criterion = "0.8.2"
packed_struct = "0.10.1"
zerocopy = "0.8.39"
bilge = "0.3.0"
bytemuck.workspace = true
memchr = "2.8.0"
bitflags = { workspace = true }
roaring = "0.11.3"
smallvec = { workspace = true }

[[bench]]
name = "lib"
harness = false

[[bin]]
name = "sandbox"
