[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi = { workspace = true }
geometry = { workspace = true }
rustix = { workspace = true }
smol = { workspace = true }
derive_more = { workspace = true }
parking_lot = "0.12.5"
filedescriptor = "0.8.3"
crossbeam-channel = "0.5.15"
crossbeam = "0.8.4"
bytemuck = { workspace = true }
termion = "4.0.6"
