[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.1"
derive_builder = "0.20.2"
derive_more = { workspace = true }
proptest = "1.11.0"
compact_str = "0.9.0"
signal-hook = "0.4.4"
smol = "2.0.2"
rustix = { version = "1", features = ["termios"] }
crossbeam = "0.8.4"
async-channel = "2.5.0"
parking_lot = "0.12.5"
utils = { workspace = true }
event-listener = "5.4.1"
async-broadcast = "0.7.2"
async-executor = "1.14.0"
signal-hook-async-std = "0.4.0"
async-process = "2.5.0"
